--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Optional -- Robolectric environment
+    testImplementation "androidx.test:core:1.5.0"
+    // Optional -- Mockito framework
+    testImplementation "org.mockito:mockito-core:5.4.0"
+    // Optional -- mockito-kotlin
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    // Optional -- Mockk framework
+    testImplementation "io.mockk:mockk:1.13.5"
 }
